修复超级管理员修改密码无法登录的bug

--- a/application/homepage/view/index/index.html
+++ b/application/homepage/view/index/index.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <title>先知眼</title>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="http://xianzhiyan.com/static/ico/favicon.png">
 	<link rel="stylesheet" href="http://xianzhiyan.com/static/homepage/css/common.css">
 	<link rel="stylesheet" href="http://xianzhiyan.com/static/bootstrap/css/bootstrap.min.css">
@@ -15,7 +18,7 @@
 		<header id="header">
 			<nav class="headNavs fr tr">
 			<?php 
-				if($level<3)
+				if($level<2)
 				{
 					echo  '<a href="/bms/index/index"><span class="s-icon s-icon-treasure"></span><span>个人中心</span></a>';
 				}else
