--- a/application/login/view/index/login_page.html
+++ b/application/login/view/index/login_page.html
@@ -130,7 +130,7 @@
                                 <input type="text" name="code" placeholder="验证码" class="form-password form-control text" id="code" style="color:black;">
                                 </div>
                                 
-                                <div class="col-sm-4" style="width:200px">
+                                <div class="col-sm-4" style="width:200px;cursor:pointer">
                                 	<img id="codeimage" src="/captcha.html" alt="captcha" onclick="javascript:document.getElementById('codeimage').src = '/captcha.html?time=' + Math.random();">
                                 </div>
                             </div>
