--- a/application/bms/view/bad_type/index.html
+++ b/application/bms/view/bad_type/index.html
@@ -30,7 +30,7 @@
 <div class="page-container">
 	<div class="cl pd-5 bg-1 bk-gray mt-20"> 
 		<span class="l">
-			<a href="javascript:;" onclick="badtype_addpage('添加恶意类目','addpage.html','','510')" class="btn btn-primary radius">
+			<a href="javascript:;" onclick="badtype_addpage('添加恶意类目','addpage','','510')" class="btn btn-primary radius">
 				<i class="Hui-iconfont">&#xe600;</i> 添加恶意类目
 			</a>
 		</span> 
